# newbee-ocr-cli

./: Cargo.toml  README.md  dist-workspace.toml
src/: main.rs  models.rs
